--- a/front/index.html
+++ b/front/index.html
@@ -42,6 +42,8 @@
     <div id="membres-section">
       <h2 class="text-primary mb-4">لائحة الأعضاء</h2>
       <button type="button" class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#addMembreModal">إضافة عضو جديد</button>
+      <!-- Bouton pour ouvrir le modal de recherche -->
+      <button type="button" class="btn btn-primary mb-3 mx-2" data-bs-toggle="modal" data-bs-target="#searchMembreModal">بحث عن عضو</button>
       <div id="membres-list" class="row gy-3">
         <!-- Membres insérés dynamiquement ici -->
       </div>
@@ -118,7 +120,67 @@
           </div>
         </div>
       </div>
-    </div>    
+    </div> 
+    
+    <!-- Modale pour rechercher des membres -->
+    <div class="modal fade" id="searchMembreModal" tabindex="-1" aria-labelledby="searchMembreModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="searchMembreModalLabel">بحث عن عضو</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="searchMembreForm">
+              <div class="mb-3">
+                <label for="searchGenre" class="form-label">الجنس</label>
+                <select class="form-select" id="searchGenre" name="genre">
+                  <option value="">-- اختر الجنس --</option>
+                  <option value="Homme">رجل</option>
+                  <option value="Femme">امرأة</option>
+                </select>
+              </div>
+              <div class="mb-3">
+                <label for="searchLieuTravail" class="form-label">مكان العمل</label>
+                <input type="text" class="form-control" id="searchLieuTravail" name="lieu_travail" placeholder="مكان العمل">
+              </div>
+              <div class="mb-3">
+                <label for="searchAge" class="form-label">العمر</label>
+                <input type="number" class="form-control" id="searchAge" name="age" placeholder="العمر">
+              </div>
+              <button type="submit" class="btn btn-primary">بحث</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section des entités -->
+    <div id="entites-section">
+      <h2 class="text-primary mb-4">لائحة الكيانات</h2>
+      <button type="button" class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#addEntiteModal">إضافة كيان جديد</button>
+      <div id="entites-list" class="row gy-3">
+        <!-- Entités insérées dynamiquement ici -->
+      </div>
+    </div>
+
+    <!-- Section Cartes -->
+    <div id="cartes-section" class="d-none">
+      <h2 class="text-primary mb-4">بطاقات الانخراط</h2>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>العضو</th>
+            <th>الوضعية</th>
+            <th>تاريخ التسليم</th>
+          </tr>
+        </thead>
+        <tbody id="cartes-list">
+          <!-- Cartes dynamiques insérées ici -->
+        </tbody>
+      </table>
+    </div>
   </main>
 
   <!-- Menu de navigation -->
